# hCodeGUI

./: .ghci  .gitignore  README.md  hCodeGUI.cabal
app/: Main.hs
src/: Cfg.hs
src/Code/: HomaCode.hs
src/Code/HomaCode/: Code.hs  Data.hs  HData.hs  Math.hs  Tape.hs  TapeInfo.hs
src/Code/HomaCode/Parallel/: TapeInfo.hs
src/Lang/: HomaLang.hs
src/Templates/: Blocks.hs
src/View/: Blocks.hs  Cfg.hs
test/: Spec.hs
