cabal-version: 3.0

name:           hCodeGUI
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/homaander/hCodeGUI#readme>
homepage:       https://github.com/githubuser/hCodeGUI#readme
bug-reports:    https://github.com/githubuser/hCodeGUI/issues
author:         Andrew
maintainer:     example@example.com
copyright:      2024 Author name here
license:        BSD-3-Clause
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/homaander/hCodeGUI

common warnings
    ghc-options: 
      -Wall
      -threaded
    --   "-with-rtsopts=-N -s"

    --   -Wcompat
    --   -Widentities
    --   -Wincomplete-record-updates
    --   -Wincomplete-uni-patterns
    --   -Wmissing-export-lists
    --   -Wmissing-home-modules
    --   -Wpartial-fields
    --   -Wredundant-constraints

common cdeps
  default-extensions:
    OverloadedStrings
    TypeApplications

  build-depends:
      base >=4.7 && <5

    , monomer

    , mtl
    , text
    , bytestring
    , text-show

    , aeson
    , lens

    , data-default

    , parallel
    , deepseq


library
  import: warnings
  import: cdeps

  hs-source-dirs: src
  exposed-modules:
      Cfg
      Code.HomaCode
      Code.HomaCode.Code
      Code.HomaCode.Data
      Code.HomaCode.HData
      Code.HomaCode.Math
      Code.HomaCode.Tape
      Code.HomaCode.TapeInfo
      View.Blocks

  default-language: Haskell2010

executable hCodeGUI-exe
  import: warnings
  import: cdeps

  ghc-options: -rtsopts

  hs-source-dirs: app
  main-is: Main.hs

  build-depends: hCodeGUI

  default-language: Haskell2010

test-suite hCodeGUI-test
  import: warnings
  import: cdeps

  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs

  build-depends: hCodeGUI

  default-language: Haskell2010
